compiler/test-data/parser/theme/errors/unclosed_brace.frel
module theme.errors.unclosed_brace

theme AppTheme {
    padding : u32 = 16
